updating latest changes...

--- a/src/main/webapp/home-d-dealer.html
+++ b/src/main/webapp/home-d-dealer.html
@@ -51,7 +51,7 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li>
-							<a x-ng-href="#{{homeView}}"><i class="fa fa-home"></i> Home</a>
+							<a x-ng-href="#/home"><i class="fa fa-home"></i> Home</a>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
