--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
 <link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
 <link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
+<link rel="stylesheet" href="assets/ngSweetAlert/sweetalert.css">
 <link rel="stylesheet" href="assets/home.css" />
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -57,7 +58,7 @@
 					</form>
 					<ul class="nav navbar-nav">
 						<li>
-							<a x-ng-href="#{{homeView}}"><i class="fa fa-home"></i> Home</a>
+							<a x-ng-href="#/home"><i class="fa fa-home"></i> Home</a>
 						</li>
 					</ul>
 					<form class="navbar-form navbar-left">
@@ -165,6 +166,11 @@
 	src="assets/angular-panels/angular.panels.js"></script>
 <script type="text/javascript" 
 	src="assets/angular-presence/angular-presence.min.js"></script>
+
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/sweetalert.min.js"></script>
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/ngSweetAlert.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
 <!-- 
