--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -12,6 +12,8 @@
 -->
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"></script>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
+<link rel="stylesheet" href="assets/ngSweetAlert/sweetalert.css">
 <link rel="stylesheet" href="assets/index.css" />
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -104,6 +106,11 @@
 	src="assets/inputmask/green.inputmask4angular.js"></script>
 <script type="text/javascript"  
 	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
+
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/sweetalert.min.js"></script>
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/ngSweetAlert.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
 <!-- 
