--- a/src/main/webapp/modules/home/index-d.html
+++ b/src/main/webapp/modules/home/index-d.html
@@ -5,12 +5,11 @@
 	<p>
 		<a class="btn btn-primary btn-lg" x-ng-href="#/signin">Get started now...</a>
 	</p>
-	<!-- 
 	<div class="text-center">
-		<button class="btn btn-success" x-ng-click="success()">Success</button>
-		<button class="btn btn-info"    x-ng-click="info()">Info</button>
-		<button class="btn btn-warning" x-ng-click="warning()">Warning</button>
-		<button class="btn btn-danger"  x-ng-click="error()">Error</button>		
+		<button class="btn btn-success"  x-ng-click="success()">Success</button>
+		<button class="btn btn-info"     x-ng-click="info()">Info</button>
+		<button class="btn btn-warning"  x-ng-click="warning()">Warning</button>
+		<button class="btn btn-danger"   x-ng-click="error()">Error</button>		
+		<button class="btn btn-primary"  x-ng-click="confirm()">Confirm</button>
 	</div>
-	-->
 </div>
