updating latest changes...

--- a/src/main/webapp/modules/customerTran/d.html
+++ b/src/main/webapp/modules/customerTran/d.html
@@ -47,7 +47,7 @@
 			{{item.averageRate | number : 5}}
 		</td>	
 		<td class="text-right">
-			{{item.unit * item.rate | number : 2}}
+			{{item.amount | number : 2}}
 		</td>
 		<td>
 			{{item.date | date:'yyyy-MM-dd HH:mm:ss'}}
