--- a/src/main/webapp/home-d-dealer.html
+++ b/src/main/webapp/home-d-dealer.html
@@ -12,7 +12,10 @@
 -->
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"/>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/ui-select/selectize..css" />
 <link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
+<link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
+<link rel="stylesheet" href="assets/ngSweetAlert/sweetalert.css">
 <link rel="stylesheet" href="assets/home.css" />
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -93,6 +96,7 @@
 <div id="footer">
 	<x-footer-navigator-directive></x-footer-navigator-directive>
 </div>
+<div data-panels="true"></div>
 
 <script type="text/javascript"
 	src="assets/lodash.min.js"></script>
@@ -129,6 +133,11 @@
 <script type="text/javascript" 
 	src="assets/angular-presence/angular-presence.min.js"></script>
 
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/sweetalert.min.js"></script>
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/ngSweetAlert.min.js"></script>
+	
 <script type="text/javascript" src="modules/init.js"></script>
 <!-- 
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByBootstrap.js"></script>
