--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -12,6 +12,7 @@
 -->
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"/>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/ui-select/selectize..css" />
 <link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
 <link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
 <link rel="stylesheet" href="assets/ngSweetAlert/sweetalert.css">
