--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -12,6 +12,7 @@
 -->
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"></script>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/ui-select/selectize..css" />
 <link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
 <link rel="stylesheet" href="assets/ngSweetAlert/sweetalert.css">
 <link rel="stylesheet" href="assets/index.css" />
@@ -120,7 +121,7 @@
 
 <script type="text/javascript" src="modules/home/indexController.js"></script>
 
-<script type="text/javascript" src="modules/session/loginController.js"></script>
+<script type="text/javascript" src="modules/session/loginController-dev.js"></script>
 
 <script type="text/javascript" src="modules/common.js"></script>
 <script type="text/javascript" src="modules/directives.js"></script>
