--- a/src/main/webapp/modules/session/login-d-dev.html
+++ b/src/main/webapp/modules/session/login-d-dev.html
@@ -1,5 +1,6 @@
 <br />
 
+
 <div class="col-md-4 col-md-offset-4">
 	<div class="panel panel-default">
 		<div class="panel-heading">
@@ -10,13 +11,21 @@
 			<fieldset>
 				<div class="form-group">
 	          		<label>User Id</label>
+	          		<!-- 
 	          		<input class="form-control" type="text" placeholder="User Id"
-	          			x-ng-model="user.userId">
+	          			x-ng-model="model.user.userId">
+	          		-->	
+					<x-ui-select ng-model="model.user" theme="bootstrap">
+					    <x-ui-select-match>{{$select.selected.userId}}</x-ui-select-match>
+					    <x-ui-select-choices repeat="user in users | filter: $select.search">
+					    	<span x-ng-bind-html="user.userId | highlight : $select.search"></span>
+					    </x-ui-select-choices>
+					</x-ui-select>
 				</div>
 		        <div class="form-group">
 	    			<label>Password</label>
 	          		<input class="form-control" type="text" placeholder="Password"
-	          			x-ng-model="user.password">
+	          			x-ng-model="model.user.password">
 				</div>
 				<div class="form-group">
 	          		<input type="checkbox" x-ng-model="rememberMe"> Remember Me
