updating latest changes...

--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -12,7 +12,7 @@
 -->
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"></script>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
-<link rel="stylesheet" href="assets/ui-select/selectize..css" />
+<link rel="stylesheet" href="assets/ui-select/selectize.css" />
 <link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
 <!-- 
 <link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
