--- a/src/main/webapp/console.html
+++ b/src/main/webapp/console.html
@@ -9,10 +9,18 @@
 
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" >
 	<link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
+	<!-- 
 	<link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
-	<link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
+	-->
+	<link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"></script>
 	<link rel="stylesheet" href="assets/ui-select/select.min.css" />
-	<link rel="stylesheet" href="modules/console.css">
+	<link rel="stylesheet" href="assets/ui-select/selectize.css" />
+	<link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
+	<!-- 
+	<link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
+	-->
+	<link rel="stylesheet" href="assets/ngSweetAlert/sweetalert.css">
+	<link rel="stylesheet" href="assets/console.css" />
 	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -22,8 +30,6 @@
 
 </head>
 <body x-ng-clock>
-
-<wyd-notify-by-bootstrap-directive></wyd-notify-by-bootstrap-directive>
 
 <div id="header">
 	<nav class="navbar navbar-default navbar-fixed-top" x-role="navigation">
@@ -87,11 +93,15 @@
 <section class="container-fluid">
 	<div class="container" x-ng-view></div>
 </section>
+
 <!-- 
 <div id="footer">
 	<x-footer-navigator-directive></x-footer-navigator-directive>
 </div>
+<wyd-notify-by-bootstrap-directive></wyd-notify-by-bootstrap-directive>
+<div data-panels="true"></div>
 -->
+
 <script type="text/javascript"
 	src="assets/is.min.js"></script>
 <script type="text/javascript"
@@ -116,9 +126,26 @@
 	src="assets/ngNotify/ng-notify.min.js"></script>
 <script type="text/javascript" 
 	src="assets/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
+<script type="text/javascript"
+	src='assets/ui-select/select.min.js'></script>
+<script type="text/javascript" 
+	src="assets/inputmask/jquery.inputmask.bundle.min.js"></script>
+<script type="text/javascript" 
+	src="assets/inputmask/green.inputmask4angular.js"></script>
+<script type="text/javascript"  
+	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
+<!-- 
+<script type="text/javascript" 
+	src="assets/angular-panels/angular.panels.js"></script>
+<script type="text/javascript" 
+	src="assets/angular-presence/angular-presence.min.js"></script>
+-->
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/sweetalert.min.js"></script>
+<script type="text/javascript" 
+	src="assets/ngSweetAlert/ngSweetAlert.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
-<script type="text/javascript" src="modules/common.js"></script>
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
 
 <script type="text/javascript" src="modules/console/dataService.js"></script>
@@ -126,8 +153,8 @@
 <script type="text/javascript" src="modules/console/dataViewer/controller.js"></script>
 <script type="text/javascript" src="modules/console/system/controller.js"></script>
 
+<script type="text/javascript" src="modules/common.js"></script>
 <script type="text/javascript" src="modules/directives.js"></script>
-
 <script type="text/javascript" src="modules/console.js"></script>    
 
 </body>
