--- a/src/main/webapp/modules/zgeneral/sideMenuLeft-d-manager.html
+++ b/src/main/webapp/modules/zgeneral/sideMenuLeft-d-manager.html
@@ -3,7 +3,7 @@
 </div>
 <ul class="list-group">
 	<li class="list-group-item">
-		<a x-ng-href="#{{homeView}}">
+		<a x-ng-href="#/home">
 			<i class="fa fa-home"></i> Home
 		</a>
 		<a href="#/trialBalance" class="pull-right"> 
