--- a/src/main/webapp/modules/counter/productView.html
+++ b/src/main/webapp/modules/counter/productView.html
@@ -68,7 +68,9 @@
 		</tr>
 		<tr>
 			<td class="text-right text-primary">
-				<strong><small>-</small></strong>
+				<strong><small>
+{{(receipt.curTran.item.product.handStock - receipt.curTran.item.handStock) | number}}				
+				</small></strong>
 			</td>
 		</tr>
 		<tr>
@@ -78,7 +80,9 @@
 		</tr>
 		<tr>
 			<td class="text-right text-primary">
-				<strong><small>-</small></strong>
+				<strong><small>
+				-
+				</small></strong>
 			</td>
 		</tr>
 		<tr>
