--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -205,6 +205,7 @@
 <script type="text/javascript" src="modules/counter/counterService.js"></script>
 <script type="text/javascript" src="modules/counter/counterController.js"></script>
 
+<script type="text/javascript" src="modules/transfer/transferService.js"></script>
 <script type="text/javascript" src="modules/transfer/transferController.js"></script>
 
 <script type="text/javascript" src="modules/ledger/ledgerService.js"></script>
