--- a/src/main/webapp/modules/dealer/dealerEdit.html
+++ b/src/main/webapp/modules/dealer/dealerEdit.html
@@ -5,4 +5,9 @@
 		x-ng-click="back()"> 
 		Back
 	</button>
+
+	<button type="button" class="btn btn-primary"
+		x-ng-click="back()"> 
+		Save
+	</button>
 </div>
