--- a/src/main/webapp/modules/counter/d.html
+++ b/src/main/webapp/modules/counter/d.html
@@ -69,7 +69,7 @@
 						&nbsp;&nbsp;Receipt Id : <strong>{{receipt.id}}</strong>
 					</span>
 				</div>
-				&nbsp;&nbsp;&nbsp;&nbsp;{{receipt.curTran.message}} {{receipt.curTranIndex}} {{receipt.trans.length}}
+				&nbsp;&nbsp;&nbsp;&nbsp;{{receipt.curTran.message}}
 				<div class="pull-right">
 					<button class="btn btn-default btn-sm"
 						x-tooltip="Add New Transaction"
