updating latest changes...

--- a/src/main/webapp/console.html
+++ b/src/main/webapp/console.html
@@ -50,13 +50,7 @@
 						<a x-ng-href="#/home"><i class="fa fa-home"></i> Home</a>
 					</li>
 					<li>
-						<a href="#/dataViewer">Data Viewer</a>
-					</li>
-					<li>
-						<a href="#/ledgerTransaction">Ledger Transaction</a>
-					</li>
-					<li>
-						<a href="#/salesTransaction">Sales Transaction</a>
+						<a href="#/shops">Shops</a>
 					</li>
 					<li>
 						<a href="#/transactions">Transactions</a>
