--- a/src/main/webapp/modules/console/dataViewer/d-employees.html
+++ b/src/main/webapp/modules/console/dataViewer/d-employees.html
@@ -18,7 +18,7 @@
 	   	<th class="text-center"><small>Cash Acct Id</small></th>
 	   	<th class="text-center"><small>Prof Acct Id</small></th>
 	   	<th class="text-center"><small>Role</small></th>
-	   	<th class="text-center"><small>&nbsp;</small></th>
+	   	<th width="40"><small>&nbsp;</small></th>
 	</tr>
 	</thead>
 	<tbody>
