--- a/src/main/webapp/modules/console/dataViewer/d.html
+++ b/src/main/webapp/modules/console/dataViewer/d.html
@@ -1,47 +1,74 @@
-<div class="panel panel-default">
-  <div class="panel-heading text-center">
-  		<span class="pull-left">
-			<button	type="button" class="btn btn-default btn-sm" 
-				x-ng-disabled="items.length == 0"
-				x-ng-click="refresh()">
-				<i class="fa fa-refresh"></i>
-			</button>
-		</span>
-		&nbsp;
-  </div>
-  <table class="table table-striped table-bordered table-hover">
-	<thead>
-	<tr>
-		<th><small>#</small></th>
-		<th><small>Id</small></th>
-		<th><small>Name</small></th>
-		<th><small>Employees</small></th>
-		<th><small>Dealers</small></th>
-		<th><small>Customers</small></th>
-		<th><small>Products</small></th>
-		<th><small>Accounts</small></th>
-		<th><small>&nbsp;</small></th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr x-ng-repeat="item in items">
-		<td class="text-right">{{$index+1}}</td>
-		<td class="text-right"><a href="#/dataViewer/branchs/branch/{{item.id}}">{{item.id}}</a></td>
-		<td>{{item.name}}</td>
-		<td class="text-right"><a href="#/dataViewer/branchs/branch/{{item.id}}/employees">{{item.employees.length}}</a></td>
-		<td class="text-right"><a href="#/dataViewer/branchs/branch/{{item.id}}/dealers">{{item.dealers.length}}</a></td>
-		<td class="text-right"><a href="#/dataViewer/branchs/branch/{{item.id}}/customers">{{item.customers.length}}</a></td>
-		<td class="text-right"><a href="#/dataViewer/branchs/branch/{{item.id}}/products">{{item.products.length}}</a></td>
-		<td class="text-right"><a href="#/dataViewer/branchs/branch/{{item.id}}/accounts">{{item.accounts.length}}</a></td>
-		<td class="text-center">
+
+	<div class="panel panel-default">
+	  <div class="panel-heading text-center">
+	  		<span class="pull-left">
+				<button	type="button" class="btn btn-default btn-sm" 
+					x-ng-disabled="items.length == 0"
+					x-ng-click="refresh()">
+					<i class="fa fa-refresh"></i>
+				</button>
+			</span>
 			&nbsp;
-	    </td>
-	</tr>
-	</tbody>
-	</table>
-</div>
-<!-- 
-<div>
-	<pre>{{items | json}}</pre>
-</div>
--->
+			<span class="pull-right">
+				<a class="btn btn-default btn-sm"
+					x-tooltip="Add New Shop"
+					href="#/dataViewer/branchs/branch">
+					<i class="fa fa-plus"></i> New&nbsp;&nbsp;
+				</a>
+	   		</span>
+	  </div>
+	  <table class="table table-striped table-bordered table-hover">
+		<thead>
+		<tr>
+			<th><small>#</small></th>
+			<th><small>Id</small></th>
+			<th><small>Name</small></th>
+			<th><small>Employees</small></th>
+			<th><small>Dealers</small></th>
+			<th><small>Customers</small></th>
+			<th><small>Products</small></th>
+			<th><small>Accounts</small></th>
+			<th width="40"><small>&nbsp;</small></th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr x-ng-repeat="item in items">
+			<td class="text-right">{{$index+1}}</td>
+			<td class="text-right"><a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}">{{item.id}}</a></td>
+			<td>{{item.name}}</td>
+			<td class="text-right"><a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}/employees">{{item.employees.length}}</a></td>
+			<td class="text-right"><a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}/dealers">{{item.dealers.length}}</a></td>
+			<td class="text-right"><a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}/customers">{{item.customers.length}}</a></td>
+			<td class="text-right"><a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}/products">{{item.products.length}}</a></td>
+			<td class="text-right"><a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}/accounts">{{item.accounts.length}}</a></td>
+			<td class="text-center" width="40">
+				<div class="btn-group" x-dropdown>
+	      			<button type="button" class="btn btn-default btn-sm dropdown-toggle" 
+	      				x-dropdown-toggle>
+	        			<i class="fa fa-ellipsis-v"></i>
+	      			</button>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a x-ng-href="#/dataViewer/branchs/branch/{{item.id}}/trialBalance">
+								<i class="fa fa-minus"></i>&nbsp;&nbsp;Trial Balance
+							</a>
+						</li>
+						<li>
+							<a href="" x-ng-click="resetBranch(item.id)">
+								<i class="fa fa-refresh"></i>&nbsp;&nbsp;Reset
+							</a>
+						</li>
+						<li class="divider"></li>
+						<li>
+							<a href="" x-ng-click="deleteBranch(item.id)">
+								<i class="fa fa-times"></i>&nbsp;&nbsp;Delete
+							</a>
+						</li>
+					</ul>
+			    </div>
+		    </td>
+		</tr>
+		</tbody>
+		</table>
+	</div>
+
