--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -89,7 +89,7 @@
 					</div>
 					<div class="col-md-9 text-right">
 						<strong><small>
-						{{sessionContext.sessionDto.firstName}} / {{sessionContext.sessionDto.userId}} / {{sessionContext.sessionDto.roleId | capitalizeFilter}}
+						{{sessionS.context.sessionDto.firstName}} / {{sessionS.context.sessionDto.userId}} / {{sessionS.context.sessionDto.roleId | capitalizeFilter}}
 						</small></strong>
 					</div>
 				</div>
