--- a/src/main/webapp/modules/zgeneral/sideMenuLeft-d-employee.html
+++ b/src/main/webapp/modules/zgeneral/sideMenuLeft-d-employee.html
@@ -6,6 +6,9 @@
 		<a x-ng-href="#/home">
 			<i class="fa fa-home"></i> Home
 		</a>
+		<a href="#/trialBalance" class="pull-right"> 
+			Trial Balance
+		</a>
 	</li>	
 	<li class="list-group-item">
 		<a href="#/counter">
