updating latest changes...

--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -100,7 +100,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3">
-						<strong><small>Branch :</small></strong> 
+						<strong><small>Shop :</small></strong> 
 						Cash : <span class="badge badge-info">{{ sessionS.cashBranch.handStock | number : 2 }}</span>
 					</div>	
 					<div class="col-md-2">
@@ -127,7 +127,7 @@
 </section>
 
 <div id="footer">
-	<x-footer-navigator-directive></x-footer-navigator-directive>
+	<x-footer-navigator></x-footer-navigator>
 </div>
 
 <!-- 
@@ -182,7 +182,7 @@
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
 <script type="text/javascript" src="modules/session/angularPresence.js"></script>
 
-<script type="text/javascript" src="modules/session/sessionService.js"></script>
+<script type="text/javascript" src="modules/sessionService.js"></script>
 
 <script type="text/javascript" src="modules/account/accountController.js"></script>
 
