--- a/src/main/webapp/maui/modules/zgeneral/m-footerBar.html
+++ b/src/main/webapp/maui/modules/zgeneral/m-footerBar.html
@@ -3,7 +3,7 @@
 		<a class="btn btn-navbar" href="#/about">About</a> 
 		| 
 		<a class="btn btn-navbar" href="#/terms">Terms</a> 
-		<span x-ng-show="sessionContext.localMode">
+		<span x-ng-show="sessionS.context.localMode">
 		| <a class="btn btn-navbar" href="" x-ng-click="viewSource()">Source</a>
 		</span>
 	</div>
