--- a/src/main/webapp/maui/modules/zgeneral/m-headerBar.html
+++ b/src/main/webapp/maui/modules/zgeneral/m-headerBar.html
@@ -1,16 +1,18 @@
 <div class="navbar navbar-app navbar-absolute-top">
 	<div class="navbar-brand navbar-brand-center" x-ui-yield-to="title">
-       	Seetu
+       	Watch Your Sales
 	 </div>
 	<div class="btn-group pull-left">
     	<div x-ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
         	<i class="fa fa-bars"></i> Menu
        	</div>
 	</div>
+	
     <div class="btn-group pull-right" x-ui-yield-to="navbarAction" 
     	x-ng-show="isLoggedIn">
     	<div x-ui-toggle="uiSidebarRight" class="btn">
        		Cash &amp; Stock
     	</div>
     </div>
+    
 </div>
