--- a/src/main/webapp/maui/modules/session/m-login.html
+++ b/src/main/webapp/maui/modules/session/m-login.html
@@ -14,7 +14,7 @@
 				<div class="form-group">
 	          		<label>User Id</label>
 	          		<input class="form-control" type="text" placeholder="User Id"
-	          			x-ng-model="user.id">
+	          			x-ng-model="user.userId">
 				</div>
 		        <div class="form-group">
 	    			<label>Password</label>
@@ -25,12 +25,12 @@
 	          		<input type="checkbox" x-ng-model="rememberMe"> Remember Me
 	        	</div>
 		    	<hr/>
-		   		<button class="btn btn-primary btn-block" x-ng-click="signin()">
+		   		<button class="btn btn-primary btn-block" x-ng-click="signIn()">
 		      		Login
 		    	</button>
 	    	</fieldset>	
 			<div x-ui-content-for="navbarAction">
-	      		<a class="btn" x-ng-click="signin()">Login</a>
+	      		<a class="btn" x-ng-click="signIn()">Login</a>
 	    	</div>    	
 			</form>
 		</div>
