updating latest changes...

--- a/src/main/webapp/home-d-employee.html
+++ b/src/main/webapp/home-d-employee.html
@@ -157,7 +157,7 @@
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
 <script type="text/javascript" src="modules/session/angularPresence.js"></script>
 
-<script type="text/javascript" src="modules/session/sessionService.js"></script>
+<script type="text/javascript" src="modules/sessionService.js"></script>
 
 <script type="text/javascript" src="modules/account/accountController.js"></script>
 
@@ -165,7 +165,7 @@
 
 <script type="text/javascript" src="modules/stock/stockController.js"></script>
 
-<script type="text/javascript" src="modules/employee/employeeController.js"></script>
+<script type="text/javascript" src="modules/employee/controllers.js"></script>
 
 <script type="text/javascript" src="modules/dealer/controllers.js"></script>
 <script type="text/javascript" src="modules/dealer/order/dealerOrderService.js"></script>
