updating latest changes...

--- a/src/main/webapp/modules/customer/order/customerOrderView.html
+++ b/src/main/webapp/modules/customer/order/customerOrderView.html
@@ -53,7 +53,7 @@
 	</table>
 	<div class="panel-footer text-center">
 		<span class="pull-left">
-			<a class="btn btn-default btn-sm" href="#/customerOrders">
+			<a class="btn btn-default btn-sm" href="#/customers/orders">
 				Back to Orders
 			</a>
 		</span>
