--- a/src/main/webapp/modules/zgeneral/d-sideMenuLeft-manager.html
+++ b/src/main/webapp/modules/zgeneral/d-sideMenuLeft-manager.html
@@ -33,7 +33,7 @@
 	</li>	
 	<li class="list-group-item">
 			Customer &nbsp;&nbsp;
-		<a href="#/customerOrders"> 
+		<a href="#/customers/orders"> 
 			Orders
 		</a>
 		<a href="#/customerOrderHistory" class="pull-right"> 
